# obs-xbox-zoom-pan

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
obs-xbox-zoom-pan/.github/workflows/: build-windows.yml
obs-xbox-zoom-pan/src/: settings.cpp  settings.hpp  transformer.cpp
src/: controller.cpp  plugin-main.cpp
